tests/baselines/reference/errorSuperCalls.errors.txt
==== tests/cases/compiler/errorSuperCalls.ts (15 errors) ====
    //super call in class constructor with no base type
    class NoBase {
        constructor() {
            super();
            ~~~~~
!!! error TS2103: 'super' cannot be referenced in non-derived classes.
        }
    
        //super call in class member function with no base type
        fn() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        //super call in class accessor (get and set) with no base type
        get foo() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return null;
        }
        set foo(v) {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        //super call in class member initializer with no base type
        p = super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
    
        //super call in static class member function with no base type
        static fn() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        //super call in static class member initializer with no base type
        static k = super();
                   ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
    
        //super call in static class accessor (get and set) with no base type
        static get q() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return null;
        }
        static set q(n) {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    }
    
    class Base<T> { private n: T; }
    class Derived<T> extends Base<T> {
        //super call with type arguments 
        constructor() {
            super<string>();
                 ~
!!! error TS1005: '.' expected.
            ~~~~~
!!! error TS2158: Untyped function calls may not accept type arguments.
            super();
        }
    }
    
    
    class OtherBase {
        private n: string;
    }
    
    class OtherDerived extends OtherBase {
        //super call in class member initializer of derived type
        t = super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
    
        fn() {
            //super call in class member function of derived type
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        //super call in class accessor (get and set) of derived type
        get foo() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return null;
        }
        set foo(n) {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    }
    